using UnityEngine;
using System.Collections;

public class AnimationCommand : MonoBehaviour {
	public static string ATTACK = "attack";
	public static string ATTACKED = "attacked";
	public static string SPECIAL = "special";
	public static string WIN = "win";
	public static string LOSE = "lose";
	public static string DRAW = "draw";
}

